# daxi-farm-sensor

./: .gitignore  app.py  config.py  introduction.md  issues.md  pyproject.toml  works.md
modules/: cross_analysis.py  dataframe.py  trend_analysis.py
public/css/: style.css
public/js/: main.js
utils/: server_utils.py  ui_utils.py
